--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <script>
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'" />
+    <meta http-equiv="refresh" content="0;URL='/widget'" />
     <title>Page not found &middot; GitHub Pages</title>
     <style type="text/css" media="screen">
       body {
