fix: 404 redirect path

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'"
     />
     <script>
-      sessionStorage.redirect = location.href;
+      sessionStorage.redirect = 'http://github.qiuz.site/widget/';
     </script>
     <meta http-equiv="refresh" content="0;URL='/widget'" />
     <title>Page not found &middot; GitHub Pages</title>
