--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'"
     />
     <script>
-      sessionStorage.redirect = 'http://github.qiuz.site/widget/';
+      sessionStorage.redirect = location.origin + '/widget/';
     </script>
     <meta http-equiv="refresh" content="0;URL='/widget'" />
   </head>
