--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Widgets</title>
+    <script>
+      // 这段代码要放在其他js的前面
+      (function () {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+          var next = redirect.split(location.origin)[1];
+          if (next) {
+            setTimeout(() => {
+              history.pushState(null, null, next);
+            }, 100);
+          }
+        }
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
