--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'"
     />
     <script>
-      sessionStorage.redirect = location.origin + '/widget/';
+      sessionStorage.redirect = location.href;
     </script>
     <meta http-equiv="refresh" content="0;URL='/widget/'" />
     <style type="text/css" media="screen">
